changed id on submit button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="btn btn-default" id="submit-user" type="submit">Submit</button>
+                            <button class="btn btn-default" id="submitBtn" type="submit">Submit</button>
                         </form>
                     </div>
                 </div>
