--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- page header -->
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-center jumbotron">
+                <div class="text-center jumbotron pgHead">
                     <h1>Choo Choo Times</h1>
                     <h2>Cus we need to know when to go.</h2>
                 </div>
@@ -30,7 +30,7 @@
         <!-- table of train times -->
         <div class="row">
             <div class="col-xs-12">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <!-- Default panel contents -->
                     <div class="panel-heading">Chugga Chugga CHOO CHOO</div>
                     <!-- Table -->
@@ -49,7 +49,7 @@
         <!-- form for adding new trains -->
         <div class="row">
             <div class="col-xs-12">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <!-- Default panel contents -->
                     <div class="panel-heading">Add new choo choo machine:</div>
                     <div class="panel-body">
