--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+    <!-- moment cdn -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <!-- train schedule logic -->
     <script src="./assets/js/logic.js"></script>
 </head>
@@ -35,13 +37,15 @@
                     <div class="panel-heading">Chugga Chugga CHOO CHOO</div>
                     <!-- Table -->
                     <table class="table">
-                        <tr>
-                            <th>Train Name</th>
-                            <th>Destination</th>
-                            <th>Frequency (min)</th>
-                            <th>Next Arrival</th>
-                            <th>Minutes Away</th>
-                        </tr>
+                        <tbody id="trainTable">
+                            <tr>
+                                <th>Train Name</th>
+                                <th>Destination</th>
+                                <th>Frequency (min)</th>
+                                <th>Next Arrival</th>
+                                <th>Minutes Away</th>
+                            </tr>
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -65,11 +69,8 @@
                             <div class="form-group">
                                 <label for="ftt-input">First train time - military time (HH:MM):</label>
                                 <div class="row">
-                                    <div class="col-xs-1">
-                                        <input class="form-control" id="ftt-input-hours" type="number">
-                                    </div>
-                                    <div class="col-xs-1">
-                                        <input class="form-control" id="ftt-input-minutes" type="number">
+                                    <div class="col-xs-2">
+                                        <input class="form-control" id="ftt-input" type="text">
                                     </div>
                                 </div>
                             </div>
@@ -77,7 +78,7 @@
                                 <div class="row">
                                     <div class="col-xs-1">
                                         <label for="freq-input">Frequency (min):</label>
-                                        <input class="form-control" id="freq-input" type="number">
+                                        <input class="form-control" id="freq-input" type="text">
                                     </div>
                                 </div>
                             </div>
